strings to appsettings

--- a/Utils/Messages/StringsFormatedMsg.resx
+++ b/Utils/Messages/StringsFormatedMsg.resx
@@ -117,10 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CONFIG" xml:space="preserve">
+  <data name="APPCONFIG" xml:space="preserve">
+    <value>&lt;add key="{1}" value="{1}"/&gt;</value>
+  </data>
+  <data name="APPJSON" xml:space="preserve">
+    <value>"{0}":{1}</value>
+  </data>
+  <data name="CONNCONFIG" xml:space="preserve">
     <value>&lt;add name="{0}" providerName="{1}" connectionString="Data Source={2};Initial Catalog={3};User Id={4}; Password={5};Pooling={6};Connect Timeout={7};Aplication Name={8}"/&gt;</value>
   </data>
-  <data name="JSON" xml:space="preserve">
+  <data name="CONNJSON" xml:space="preserve">
     <value>"{0}":"Data Source={1};Initial Catalog={2};User ID={3};Password={4};Pooling={5};Connect Timeout={6};Application Name={7}"</value>
   </data>
 </root>
