--- a/Utils/Messages/Documentation/DocumentationMsg.resx
+++ b/Utils/Messages/Documentation/DocumentationMsg.resx
@@ -144,4 +144,7 @@
   <data name="COMMAND006" xml:space="preserve">
     <value>display</value>
   </data>
+  <data name="COMMAND007" xml:space="preserve">
+    <value>configuration</value>
+  </data>
 </root>
