add description and using documentation msgs

--- a/Utils/Messages/Documentation/DocumentationMsg.resx
+++ b/Utils/Messages/Documentation/DocumentationMsg.resx
@@ -126,6 +126,9 @@
   <data name="BRANCH003" xml:space="preserve">
     <value>settings</value>
   </data>
+  <data name="BRANCH004" xml:space="preserve">
+    <value>configuration</value>
+  </data>
   <data name="COMMAND001" xml:space="preserve">
     <value>appsettings</value>
   </data>
@@ -145,6 +148,9 @@
     <value>display</value>
   </data>
   <data name="COMMAND007" xml:space="preserve">
-    <value>configuration</value>
+    <value>create</value>
+  </data>
+  <data name="COMMAND008" xml:space="preserve">
+    <value>reset</value>
   </data>
 </root>
