--- a/Utils/Messages/Documentation/DescriptionMsg.resx
+++ b/Utils/Messages/Documentation/DescriptionMsg.resx
@@ -144,4 +144,7 @@
   <data name="COMMAND006" xml:space="preserve">
     <value>Display {0}</value>
   </data>
+  <data name="COMMAND007" xml:space="preserve">
+    <value>Create date files for the application</value>
+  </data>
 </root>
